ENG-4782 Java 8 compatibility